objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Performance_History__c</fullName>
        <label>Academic Performance History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Classroom__c</fullName>
        <label>Classroom</label>
        <referenceTo>Classroom__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Specially_abled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Checkbox has been created to know if the student is physically challenged</description>
        <label>Is Specially abled ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marks__c</fullName>
        <label>Marks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Student personal contact number to be entered</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <description>Autogenerate Roll number for a students.</description>
        <displayFormat>A-{0000}</displayFormat>
        <inlineHelpText>Autogenerated Number</inlineHelpText>
        <label>Roll No.</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Student_Age__c</fullName>
        <description>This field is created to hold the age of a student</description>
        <inlineHelpText>student age</inlineHelpText>
        <label>Student Age</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject_Name__c</fullName>
        <label>Subject1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bengoli</fullName>
                </value>
                <value>
                    <fullName>Botany</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Drawing</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Social Studies</fullName>
                </value>
                <value>
                    <fullName>Telegu</fullName>
                </value>
                <value>
                    <fullName>Zoology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_Opted__c</fullName>
        <complianceGroup>HIPAA;GDPR;PCI;COPPA;CCPA</complianceGroup>
        <label>Subjects Opted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bengoli</fullName>
                </value>
                <value>
                    <fullName>Botany</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Drawing</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Methamatics</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Social Studies</fullName>
                </value>
                <value>
                    <fullName>Telgu</fullName>
                </value>
                <value>
                    <fullName>Zoology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Custom_View</fullName>
        <columns>NAME</columns>
        <columns>Classroom__c</columns>
        <columns>Roll_Number__c</columns>
        <columns>Student_Age__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>My Custom View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DOB_Can_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(DOB__c)</errorConditionFormula>
        <errorDisplayField>DOB__c</errorDisplayField>
        <errorMessage>Please enter DOB</errorMessage>
    </validationRules>
</CustomObject>